Adjusted Login.html and Register.html

--- a/WebContent/css/signin.css
+++ b/WebContent/css/signin.css
@@ -26,17 +26,13 @@
 {
     z-index: 2;
 }
-.form-signin input[type="text"]
+.form-signin input[type="email"]
 {
-    margin-bottom: -1px;
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    margin-bottom: -10px;
 }
 .form-signin input[type="password"]
 {
     margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
 }
 .account-wall
 {
