Form validation for register.html and cleaned js coding in this file

--- a/WebContent/css/register.css
+++ b/WebContent/css/register.css
@@ -35,6 +35,13 @@ body {
 	background-color: #f2dede;
 }
 
+.has-warning {
+	border-color: #8a6d3b;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	background-color: #fcf8e3;
+}
+
 .form-signin .form-control: focus {
 	z-index: 2;
 }
