Login.jsp and LoginServlet adjusted for AJAX-call and response

--- a/WebContent/css/signin.css
+++ b/WebContent/css/signin.css
@@ -50,6 +50,20 @@
     font-weight: 400;
     display: block;
 }
+
+.has-error {
+	border-color: #a94442;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	background-color: #f2dede;
+}
+.has-warning {
+	border-color: #8a6d3b;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	background-color: #fcf8e3;
+}
+
 .profile-img
 {
     width: 96px;
