--- a/WebContent/css/intern.css
+++ b/WebContent/css/intern.css
@@ -3,19 +3,50 @@
 	height: 55px;
 	margin-left: -30px;
 	margin-right: -30px;
-	margin-bottom: 0; padding : 0 !important;
+	margin-bottom: 0;
 	border: 0;
 	transition: bottom .4s ease;
 	line-height: 55px;
 	border-radius: 0px;
-	padding: 0;
 	padding: 0 !important;
+	cursor: context-menu;
+}
+
+.messageicon_border_error {
+	border-color: #843534 !important;
+	cursor: context-menu;
+}
+
+.messageicon_error {
+	color: #d9534f;
+	/* 	content: "\f00d"; */
+}
+
+.messageicon_border_warning {
+	border-color: #66512c !important;
+}
+
+.messageicon_warning {
+	color: #f0ad4e;
+	/* 	content: "\f12a"; */
+}
+
+.messageicon_border_success {
+	border-color: #3c763d !important;
+}
+
+.messageicon_success {
+	color: #5cb85c;
+	/* 	content: "\f00c"; */
 }
 
 .messageicon {
-	outline: none;
+	background-color: #fff !important;
+	outline: 0 !important;
 	margin-left: 30px;
 	margin-right: 15px;
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
 }
 
 .functiontile {
