--- a/WebContent/css/intern.css
+++ b/WebContent/css/intern.css
@@ -4,12 +4,19 @@
 	margin-left: -30px;
 	margin-right: -30px;
 	margin-bottom: 0;
+	bottom: 0;
 	border: 0;
 	transition: bottom .4s ease;
 	line-height: 55px;
 	border-radius: 0px;
 	padding: 0 !important;
 	cursor: context-menu;
+	border: 0;
+}
+
+.messagebar_hidden {
+	bottom: 55px;
+	transition: bottom .4s ease;
 }
 
 .messageicon_border_error {
@@ -49,12 +56,58 @@
 	box-shadow: none !important;
 }
 
+.panelicon {
+	background-color: #fff !important;
+	border-color: #333;
+	outline: 0 !important;
+	margin-right: 15px;
+	-webkit-box-shadow: none !important;
+	box-shadow: none !important;
+	cursor: context-menu;
+	transition: border-color 750ms ease;
+}
+
+.panelicon:active, .panelicon:hover {
+	border-color: #333;
+}
+
+.panelheader {
+	height: 65px;
+	line-height: 45px;
+}
+
+.panelheader_next_step {
+	opacity: 0.5;
+	transition: opacity .4s !important;
+}
+
+.panelheader_set_current_step {
+	opacity: 1;
+}
+
+.panelheader_completed {
+	color: #3c763d !important;
+	background-color: #dff0d8 !important;
+	border-color: #d6e9c6 !important;
+}
+
 .functiontile {
 	margin-top: 30px;
 }
 
+.page_content {
+	position: relative;
+	bottom: 55px;
+	transition: bottom .4s ease;
+}
+
+.page_content_move_down {
+	bottom: 0px;
+	transition: bottom .4s ease;
+}
+
 .navbaricon {
 	font-size: 20px;
-	margin-right: 5px;
+	margin-right: 8px;
 	line-height: 30px;
 }
