--- a/WebContent/css/intranet_style.css
+++ b/WebContent/css/intranet_style.css
@@ -11,3 +11,14 @@ author: bootply.com
 body {
   padding-top: 70px;
 }
+
+.navbar, navbar-default, navbar-fixed-top{
+
+  background: -webkit-linear-gradient(#B2BFCA, #fff); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#B2BFCA, #fff); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#B2BFCA, #fff); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#B2BFCA, #fff); /* Standard syntax */
+
+  border-bottom: 1px solid #428BCA;
+
+}
