Restructured, outsourced and optimized JavaScript coding Cleaned stylesheets Added i18n .properties file and handling for messages

--- a/WebContent/css/register.css
+++ b/WebContent/css/register.css
@@ -1,31 +1,7 @@
 body {
 	padding-top: 40px;
 	padding-bottom: 40px;
-	/*background-color: #eee;*/
-}
-
-.form-signin {
-	max-width: 330px;
-	padding: 15px;
-	margin: 0 auto;
-}
-
-.form-signin .form-signin-heading, .form-signin .checkbox {
-	margin-bottom: 10px;
-}
-
-.form-signin .checkbox {
-	font-weight: normal;
-}
-
-.form-signin .form-control {
-	position: relative;
-	height: auto;
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 10px;
-	font-size: 16px;
+	background-color: #fff !important;
 }
 
 .has-error {
@@ -42,18 +18,85 @@ body {
 	background-color: #fcf8e3;
 }
 
-.form-signin .form-control: focus {
-	z-index: 2;
+.container {
+	margin: 40px auto;
+	max-width: 600px;
+	height: auto;
+	background-color: #F9F9F9;
+	text-align: center;
 }
 
-.form-signin input[type="email"] {
-	margin-bottom: -1px;
-	border-bottom-right-radius: 0;
-	border-bottom-left-radius: 0;
+.btn-red {
+	color: #fff;
+	background-color: #C03A2A;
+	border-color: #A83A2A;
+	margin: 20px auto 10px auto;
+	outline: none;
+	width: 50%;
+	margin-top: 113px;
+	margin-bottom: 25px;
 }
 
-.form-signin input[type="password"] {
-	margin-bottom: 10px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
+.btn-red:hover, .btn-red:focus {
+	color: #fff;
+	background-color: #A83A2A;
+	border-color: #A83A2A;
+	outline: none;
+	transition: background-color .4s ease;
 }
+
+.messagebar_placeholder {
+	position: relative;
+	top: -40px;
+	height: 55px;
+}
+
+/* .form-signin { */
+/* 	max-width: 330px; */
+/* 	padding: 15px; */
+/* 	margin: 0 auto; */
+/* } */
+
+/* .form-signin .form-signin-heading, .form-signin .checkbox { */
+/* 	margin-bottom: 10px; */
+/* } */
+
+/* .form-signin .checkbox { */
+/* 	font-weight: normal; */
+/* } */
+
+/* .form-signin .form-control { */
+/* 	position: relative; */
+/* 	height: auto; */
+/* 	-webkit-box-sizing: border-box; */
+/* 	-moz-box-sizing: border-box; */
+/* 	box-sizing: border-box; */
+/* 	padding: 10px; */
+/* 	font-size: 16px; */
+/* } */
+
+/* .form-signin .form-control: focus { */
+/* 	z-index: 2; */
+/* } */
+
+/* .form-signin input[type="email"] { */
+/* 	margin-bottom: -1px; */
+/* 	border-bottom-right-radius: 0; */
+/* 	border-bottom-left-radius: 0; */
+/* } */
+
+/* .form-signin input[type="password"] { */
+/* 	margin-bottom: 10px; */
+/* 	border-top-left-radius: 0; */
+/* 	border-top-right-radius: 0; */
+/* } */
+
+/* .btn-small { */
+/* 	width: 320px; */
+/* } */
+
+/* .btn-primary { */
+/* 	color: #000; */
+/* 	background-color: #C8C8C8; */
+/* 	border-color: #C8C8C8; */
+/* } */
