--- a/WebContent/css/intern.css
+++ b/WebContent/css/intern.css
@@ -1,66 +1,8 @@
-.messagebar {
-	position: relative;
-	height: 55px;
-	margin-left: -30px;
-	margin-right: -30px;
-	margin-bottom: 0;
-	bottom: 0;
-	border: 0;
-	transition: bottom .4s ease;
-	line-height: 55px;
-	border-radius: 0px;
-	padding: 0 !important;
-	cursor: context-menu;
-	border: 0;
-}
-
-.messagebar_hidden {
-	bottom: 55px;
-	transition: bottom .4s ease;
-}
-
-.messageicon_border_error {
-	border-color: #843534 !important;
-	cursor: context-menu;
-}
-
-.messageicon_error {
-	color: #d9534f;
-	/* 	content: "\f00d"; */
-}
-
-.messageicon_border_warning {
-	border-color: #66512c !important;
-}
-
-.messageicon_warning {
-	color: #f0ad4e;
-	/* 	content: "\f12a"; */
-}
-
-.messageicon_border_success {
-	border-color: #3c763d !important;
-}
-
-.messageicon_success {
-	color: #5cb85c;
-	/* 	content: "\f00c"; */
-}
-
-.messageicon {
-	background-color: #fff !important;
-	outline: 0 !important;
-	margin-left: 30px;
-	margin-right: 15px;
-	-webkit-box-shadow: none !important;
-	box-shadow: none !important;
-}
-
 .panelicon {
 	background-color: #fff !important;
 	border-color: #333;
 	outline: 0 !important;
-	margin-right: 15px;
+	margin-right: 13px;
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
 	cursor: context-menu;
@@ -97,13 +39,13 @@
 
 .page_content {
 	position: relative;
-	bottom: 55px;
-	transition: bottom .4s ease;
+	top: -55px;
+	transition: top .4s ease;
 }
 
 .page_content_move_down {
-	bottom: 0px;
-	transition: bottom .4s ease;
+	top: 0;
+	transition: top .4s ease;
 }
 
 .navbaricon {
