--- a/WebContent/css_custom/register.css
+++ b/WebContent/css_custom/register.css
@@ -1,4 +1,5 @@
 body {
+	font-family: Roboto-Regular;
 	padding-top: 40px;
 	padding-bottom: 40px;
 	background-color: #fff !important;
@@ -38,7 +39,6 @@ body {
 .simplecert_btn {
 	color: #fff !important;
 	background-color: #C03A2A;	
-	font-weight: bold;
 	transition: background-color .4s ease;
 }
 .simplecert_btn:hover, .simplecert_btn:focus {
