--- a/WebContent/css_custom/intern.css
+++ b/WebContent/css_custom/intern.css
@@ -22,6 +22,10 @@ body {
 	line-height: 45px;
 }
 
+.panel_content_next_step_or_loading {
+	display: none;
+}
+
 .panel_next_step_or_loading {
 	opacity: 0.5;
 	transition: opacity .4s !important;
@@ -58,25 +62,29 @@ body {
 	line-height: 30px;
 }
 
-.loading_gif_request {
+.loading_gif {
 	position: relative;
-	bottom: 152px;
-	left: 122px;
 	display: none;
+}
+
+.loading_gif_request_step1 {
+	bottom: 239px;
+	left: 122px;
+}
+
+.loading_gif_request_step2 {
+	bottom: 152px;
+	left: 112px;
 }
 
 .loading_gif_settings {
-	position: relative;
 	bottom: 49px;
 	left: 151px;
-	display: none;
 }
 
 .loading_gif_revoke {
-	position: relative;
 	bottom: 65px;
 	left: 216px;
-	display: none;
 }
 
 .navitem_disabled {
