Fixed app frame refresh problem by navigating over the nav bar

--- a/WebContent/css_custom/intern.css
+++ b/WebContent/css_custom/intern.css
@@ -130,6 +130,10 @@ html, body {
 	cursor: context-menu !important;
 }
 
+.nav_items_distance {
+	height: 25px;
+}
+
 .simplecert_inv_btn {
 	border: 1px solid #C03A2A;
 	background-color: #fff;
