--- a/WebContent/css_custom/_messagebar.css
+++ b/WebContent/css_custom/_messagebar.css
@@ -1,30 +1,27 @@
 .messagebar {
 	position: fixed;
-	height: 55px;
+	min-height: 55px;
 	width: 100%;
 	top: 0;
-	padding: 0;
 	margin: 0;
 	border: 0;
 	transition: top .4s ease, background-color .4s ease;
-	line-height: 55px;
+	padding: 15px 0 15px 10px;
 	border-radius: 0px;
 	cursor: default;
-	padding: 0;
 	z-index: 999;
 }
 
 .messagebar_intern {
 	position: relative;
-	height: 55px;
+	min-height: 55px;
 	top: 0;
-	padding: 0;
 	margin-left: -30px;
 	margin-right: -30px;
 	margin-bottom: 30px;
 	border: 0;
 	transition: top .4s ease, background-color .4s ease;
-	line-height: 55px;
+	padding: 15px 0 15px 10px;
 	border-radius: 0px;
 	cursor: default;
 	z-index: 999;
@@ -33,7 +30,7 @@
 .messagebar_icon {
 	background-color: #fff !important;
 	outline: 0 !important;
-	margin-left: 30px;
+	margin-left: 25px;
 	margin-right: 15px;
 	-webkit-box-shadow: none !important;
 	box-shadow: none !important;
@@ -41,13 +38,12 @@
 }
 
 .messagebar_hidden {
-	top: -55px;
+	top: -70px;
 	transition: top .4s ease;
 }
 
-.messagebar_hidden_intern {
-	top: -55px;
-	transition: top .4s ease;
+.messageicon_default {
+	line-height: 17px;
 }
 
 .messageicon_border_error {
@@ -56,7 +52,6 @@
 }
 
 .messageicon_error {
-	/* 	color: #d9534f; */
 	color: #a94442;
 	line-height: 17px;
 }
@@ -67,7 +62,6 @@
 }
 
 .messageicon_warning {
-/* 	color: #f0ad4e; */
 	color: #8a6d3b;
 	line-height: 17px;
 }
@@ -78,7 +72,6 @@
 }
 
 .messageicon_success {
-/* 	color: #5cb85c; */
 	color: #3c763d;
 	line-height: 17px;
 }
