--- a/WebContent/css_custom/intranet_style.css
+++ b/WebContent/css_custom/intranet_style.css
@@ -7,34 +7,43 @@ in your HTML file.
 license: MIT
 author: bootply.com
 */
-
 body {
-  padding-top: 70px;
+	padding-top: 70px;
 }
 /* Farbe für normale Links*/
-a {color: #58733D;}
+a {
+	color: #58733D;
+}
 
-.navbar, navbar-default, navbar-fixed-top{
-  /*background: -webkit-linear-gradient(#B2BFCA, #fff); /* For Safari 5.1 to 6.0 */
-  /*background: -o-linear-gradient(#B2BFCA, #fff); /* For Opera 11.1 to 12.0 */
-  /*background: -moz-linear-gradient(#B2BFCA, #fff); /* For Firefox 3.6 to 15 */
-  /*background: linear-gradient(#B2BFCA, #fff); /* Standard syntax */
-
-  background-color: #85A663;
-  border-bottom: 1px solid #2E401C;
-
+.navbar, navbar-default, navbar-fixed-top {
+	/*background: -webkit-linear-gradient(#B2BFCA, #fff); /* For Safari 5.1 to 6.0 */
+	/*background: -o-linear-gradient(#B2BFCA, #fff); /* For Opera 11.1 to 12.0 */
+	/*background: -moz-linear-gradient(#B2BFCA, #fff); /* For Firefox 3.6 to 15 */
+	/*background: linear-gradient(#B2BFCA, #fff); /* Standard syntax */
+	/* background-color: #85A663; */
+	background-color: #8bc34a;
+	/*   border-bottom: 1px solid #2E401C; */
 }
 
 /*Farbe für Navbar Links*/
-.navbar a, navbar-default, navbar-fixed-top a{
-	color: #fff!important;}
+.navbar a, navbar-default, navbar-fixed-top a {
+	color: #fff !important;
+}
 
-/*Farbe für "Nash inc." in Navbar*/
+/*Farbe für "Nash Inc." in Navbar*/
 .navbar-header a {
-	color: #333!important;
+	/* 	color: #333 !important; */
+	
 }
 
 /*Farbe für Navbar Dropdown Links*/
 .dropdown-menu a {
-	color: #58733D!important;
+	color: #58733D !important;
+}
+
+.nash_logo {
+	margin: -4px 0px 10px 15px;
+	width: 100px;
+	border: 1px solid #fff;
+	border-radius: 4px;
 }
