--- a/WebContent/css_custom/register.css
+++ b/WebContent/css_custom/register.css
@@ -32,7 +32,7 @@ body {
 	margin: 20px auto 10px auto;
 	outline: none;
 	width: 50%;
-	margin-top: 113px;
+	margin-top: 20%;
 	margin-bottom: 25px;
 }
 
