--- a/WebContent/css_custom/register.css
+++ b/WebContent/css_custom/register.css
@@ -1,8 +1,33 @@
-body {
+.document {
+	height: 100%;
+}
+
+.body_register {
 	font-family: Roboto-Regular;
-	padding-top: 40px;
-	padding-bottom: 40px;
 	background-color: #fff !important;
+	height: inherit;
+}
+
+.container_free {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+.container_fitting {
+	position: absolute;
+	top: 10px;
+	width: 100%;
+}
+
+.register_area {
+	margin: auto;
+	max-width: 600px;
+	background-color: #F9F9F9;
+	text-align: center;
 }
 
 .has-error {
@@ -17,14 +42,6 @@ body {
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 	background-color: #fcf8e3;
-}
-
-.container {
-	margin: 40px auto;
-	max-width: 600px;
-	height: auto;
-	background-color: #F9F9F9;
-	text-align: center;
 }
 
 .btn_submit {
