Fixed tile size bug, removed app frame to fix several bugs and added redirect from revoke_certificate.jsp after revokation, adjusted table style of intranet

--- a/WebContent/css_custom/intern.css
+++ b/WebContent/css_custom/intern.css
@@ -231,9 +231,9 @@ html, body {
 	color: #C03A2A;
 }
 
-.table_icon_outdated {
+.table_icon_none {
 	font-size: 23px;
-	color: #f0ad4e;
+	color: #607D8B;
 }
 
 .table_icon_trash {
