--- a/WebContent/css_custom/login.css
+++ b/WebContent/css_custom/login.css
@@ -23,6 +23,14 @@
 	width: 100%;
 }
 
+.modal-dialog {
+	margin: auto;	
+}
+
+.modal_dialog_fitting {
+  	top: 10px !important;	
+}
+
 .login_area {
 	margin: auto;
 	max-width: 420px;
