Added second email input field for password reset modal, changed loading.gif, adjusted style

--- a/WebContent/css_custom/intern.css
+++ b/WebContent/css_custom/intern.css
@@ -106,6 +106,11 @@ html, body {
 	display: none;
 }
 
+.loading_gif_revoke {
+	margin-left: 5px;
+	display: none;
+}
+
 .navitem_disabled {
 	cursor: default !important;
 }
