--- a/WebContent/css_custom/login.css
+++ b/WebContent/css_custom/login.css
@@ -64,6 +64,10 @@
 	margin-bottom: 10px;
 }
 
+.email_address_login_modal {
+	margin-bottom: 10px;
+}
+
 .has-error {
 	border-color: #a94442;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
@@ -131,6 +135,9 @@
 
 .modal-footer {
 	border-top: none;
+}
+.modal-footer .btn+.btn {
+  margin-left: 0;
 }
 
 .modal-text {
