--- a/WebContent/css_custom/intranet_style.css
+++ b/WebContent/css_custom/intranet_style.css
@@ -1,49 +1,24 @@
-/*
-Bootstrap 3.1 overrides from http://bootply.com
-
-This CSS code should follow the 'bootstrap.css'
-in your HTML file.
-
-license: MIT
-author: bootply.com
-*/
 body {
 	padding-top: 70px;
 }
-/* Farbe für normale Links*/
+
 a {
 	color: #58733D;
 }
 
 .navbar, navbar-default, navbar-fixed-top {
-	/*background: -webkit-linear-gradient(#B2BFCA, #fff); /* For Safari 5.1 to 6.0 */
-	/*background: -o-linear-gradient(#B2BFCA, #fff); /* For Opera 11.1 to 12.0 */
-	/*background: -moz-linear-gradient(#B2BFCA, #fff); /* For Firefox 3.6 to 15 */
-	/*background: linear-gradient(#B2BFCA, #fff); /* Standard syntax */
-	/* background-color: #85A663; */
 	background-color: #8bc34a;
-	/*   border-bottom: 1px solid #2E401C; */
 }
 
-/*Farbe für Navbar Links*/
 .navbar a, navbar-default, navbar-fixed-top a {
 	color: #fff !important;
 }
 
-/*Farbe für "Nash Inc." in Navbar*/
-.navbar-header a {
-	/* 	color: #333 !important; */
-	
-}
-
-/*Farbe für Navbar Dropdown Links*/
 .dropdown-menu>li>a {
 	background-color: #fff;
 	color: #58733D !important;
 }
-
-
-/* Kleine Geräte Fix für schlechte Lesbarkeit */ 
+ 
 @media only screen and (max-width : 720px) {
 	.dropdown-menu>li>a {
 	background-color: #8bc34a;
@@ -51,10 +26,13 @@ a {
 	}
 }
 
-
 .nash_logo {
 	margin: -4px 0px 10px 15px;
 	width: 100px;
 	border: 1px solid #fff;
 	border-radius: 4px;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover {
+	background-color: #7cb342;	
 }
